add titlebar ui